--- a/web-admin-custom/keyword.html
+++ b/web-admin-custom/keyword.html
@@ -35,7 +35,7 @@
         animation: sk-scaleout 1s infinite ease-in-out
     }
 
-    @-webkit-keyframes sk-scaleout {
+    /* @-webkit-keyframes sk-scaleout {
         0% {
             -webkit-transform: scale(0)
         }
@@ -55,7 +55,8 @@
             transform: scale(1);
             opacity: 0
         }
-    }</style>
+    } */
+    </style>
     <link rel="stylesheet"
           href="assets/css/tagify.css">
 
@@ -295,8 +296,8 @@
                                         Table</h4>
                                     <table id="dataTable"
                                            class="table table-striped table-bordered "
-                                           cellspacing="0"
-                                           width="100%">
+                                            
+                                           >
                                         <thead>
                                             <tr>
                                                 <th>No</th>
@@ -317,30 +318,32 @@
                                             <tr>
                                                 <td>1</td>
                                                 <td>sql server</td>
-                                                <td>
+                                                <td width="1000">
                                                     <form>
                                                         <input type="text"
                                                                name="read1"
-                                                               value="mssql, ms sql, sqlserver">
+                                                               value="mssql, ms sql, sqlserver" readonly
+                                                               >
                                                         <br>
                                                         <input type="text"
                                                                name="tags1"
-                                                               value="">
+                                                               value="" >
                                                     </form>
                                                 </td>
                                                 <td>
-                                                    <button class="btn btn-success btn-block"
+                                                    <button class="btn btn-orange btn-block"
                                                             type="button">Update</button>
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>2</td>
                                                 <td>apache kafka</td>
-                                                <td>
+                                                <td width="1000">
                                                     <form>
                                                         <input type="text"
                                                                name="read2"
-                                                               value="kafka, apachekafka">
+                                                               value="kafka, apachekafka"
+                                                               readonly>
                                                         <br>
                                                         <input type="text"
                                                                name="tags2"
@@ -348,7 +351,7 @@
                                                     </form>
                                                 </td>
                                                 <td>
-                                                    <button class="btn btn-success btn-block"
+                                                    <button class="btn btn-orange btn-block"
                                                             type="button">Update</button>
                                                 </td>
                                             </tr>
@@ -444,6 +447,7 @@
             let existedSynonyms = document.createElement('input')
             existedSynonyms.setAttribute('name', 'read' + keyword.id)
             existedSynonyms.setAttribute('value', synonyms)
+            existedSynonyms.setAttribute('readonly')
             synonymsForm.appendChild(existedSynonyms)
             synonymsForm.appendChild(document.createElement('br'))
             let inputSynonyms = document.createElement('input')
@@ -455,7 +459,7 @@
 
             let buttonCell = document.createElement('td')
             let buttonUpdate = document.createElement('button')
-            buttonUpdate.setAttribute('class', 'btn btn-success btn-block')
+            buttonUpdate.setAttribute('class', 'btn btn-orange btn-block')
             buttonUpdate.setAttribute('type', 'submit')
             buttonUpdate.innerHTML = 'Update'
             buttonCell.appendChild(buttonUpdate)
