--- a/web-admin-custom/partner-registration.html
+++ b/web-admin-custom/partner-registration.html
@@ -298,14 +298,12 @@
             </div>
             <main class="main-content bgc-grey-100">
                 <div>
-                    <div class="row masonry pos-r">
-                        <div class="masonry-sizer col-md-6"></div>
-
-                        <div class="masonry-item col-md-6">
-                            <div class="bgc-white p-20 bd">
-                                <h3 class="c-grey-900">Partner Registration</h3>
-                                <div class="mT-30">
-                                    <form>
+                    <form>
+                        <div class="row">
+                            <div class="masonry-item col-md-6">
+                                <div class="bgc-white p-20 bd">
+                                    <h3 class="c-grey-900">Partner Registration</h3>
+                                    <div class="mT-30">
                                         <div class="form-group">
                                             <label class="font-weight-bold"
                                                    for="partner-name">Company Name</label>
@@ -314,15 +312,6 @@
                                                    id="partner-name"
                                                    placeholder="Company Name">
                                         </div>
-
-                                        <div class="form-group">
-                                            <label class="font-weight-bold"
-                                                   for="partner-description">Introduction</label>
-                                            <textarea class="form-control"
-                                                      rows="5"
-                                                      id="partner-description"></textarea>
-                                        </div>
-
                                         <div class="form-row">
                                             <div class="form-group col">
                                                 <label class="font-weight-bold"
@@ -332,7 +321,6 @@
                                                        id="partner-email"
                                                        placeholder="Email">
                                             </div>
-
                                             <div class="form-group col-md-4">
                                                 <label class="font-weight-bold"
                                                        for="partner-phone">Phone</label>
@@ -344,7 +332,6 @@
                                                        title="Example: 098 187 5110, (+84) 981875110">
                                             </div>
                                         </div>
-
                                         <div class="form-group">
                                             <label class="font-weight-bold"
                                                    for="partner-address">Address</label>
@@ -353,7 +340,6 @@
                                                    id="partner-address"
                                                    placeholder="Address">
                                         </div>
-
                                         <div class="form-group">
                                             <label class="font-weight-bold"
                                                    for="partner-logo">Logo</label>
@@ -363,7 +349,24 @@
                                                    accept="image/jpeg"
                                                    class="btn btn-sm btn-orange">
                                         </div>
-
+                                        <hr>
+                                        <button type="button"
+                                                class="btn btn-lg btn-orange"
+                                                onclick="submitForm()">Register</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="masonry-item col-md-6">
+                                <div class="bgc-white p-20 bd">
+                                    <h3 class="c-grey-900">Optional Information</h3>
+                                    <div class="mT-30">
+                                        <div class="form-group">
+                                            <label class="font-weight-bold"
+                                                   for="partner-description">Introduction</label>
+                                            <textarea class="form-control"
+                                                      rows="5"
+                                                      id="partner-description"></textarea>
+                                        </div>
                                         <div id="fields">
                                             <input type="hidden"
                                                    value="1"
@@ -396,16 +399,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <hr>
-                                        <button type="button"
-                                                class="btn btn-lg btn-orange"
-                                                onclick="submitForm()">Register</button>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-
-                    </div>
+                    </form>
                 </div>
             </main>
             <!-- <footer class="bdT ta-c p-30 lh-0 fsz-sm c-grey-600"><span>Copyright © 2017 Designed by <a href="https://colorlib.com"
