Justify Register button in Partner registration form.

--- a/web-admin-custom/partner-registration.html
+++ b/web-admin-custom/partner-registration.html
@@ -350,9 +350,9 @@
                                                    class="btn btn-sm btn-orange">
                                         </div>
                                         <hr>
-                                        <button type="button"
+										<div class="form-row justify-content-center"><button type="button"
                                                 class="btn btn-lg btn-orange"
-                                                onclick="submitForm()">Register</button>
+                                                onclick="submitForm()">Register</button></div>
                                     </div>
                                 </div>
                             </div>
