--- a/web-ui/web-v0.7.1/summary-2-tab.html
+++ b/web-ui/web-v0.7.1/summary-2-tab.html
@@ -174,6 +174,7 @@
       }).then(response => {
         if (response.status == 200) {
           $('#row' + rowId).remove();
+          successDialog();
         } else {
           errorDialog();
         }
@@ -183,7 +184,7 @@
     function successDialog() {
       swal({
         type: 'success',
-        title: 'Đã lưu!',
+        title: 'Đã đăng tin!',
         showConfirmButton: false,
         timer: 2000
       })
