Edit recruitment UI.

--- a/web-ui/web-v0.7.1/summary-2-tab.html
+++ b/web-ui/web-v0.7.1/summary-2-tab.html
@@ -184,9 +184,9 @@
     function successDialog() {
       swal({
         type: 'success',
-        title: 'Đã đăng tin!',
+        title: 'Đã lưu!',
         showConfirmButton: false,
-        timer: 2000
+        timer: 1800
       })
     };
 
@@ -195,7 +195,7 @@
         type: 'error',
         title: 'Đã có lỗi xảy ra!<br>Vui lòng thử lại sau...',
         showConfirmButton: false,
-        timer: 2000
+        timer: 1800
       })
     };
   </script>
