--- a/web-ui/web-v0.7.1/listjob.html
+++ b/web-ui/web-v0.7.1/listjob.html
@@ -11,8 +11,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href=".\css\style.css">
-    <link rel="stylesheet" href=".\css\listjob.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/listjob.css">
 </head>
 
 <body onload="getListRecruitment()">
@@ -33,32 +33,32 @@
 
         <!-- Header -->
         <nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height: 45px">
-            <a class="navbar-brand" href=".\index.html">
+            <a class="navbar-brand" href="./index.html">
                 <img src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237101/demo-image/logoctsa.png"
                     width="90" height="27" class="d-inline-block align-top" alt="CTSA logo">
             </a>
 
             <div class="collapse navbar-collapse  justify-content-center  menu" id="navbarSupportedContent">
                 <a class="mx-5" href="#">Tuyển Dụng</a>
-                <a class="mx-5" href=".\graph.html">Thống Kê</a>
+                <a class="mx-5" href="./graph.html">Thống Kê</a>
                 <a class="mx-5" href="#">Tuyển Dụng</a>
                 <a class="mx-5" href="#">Thống Kê</a>
 
             </div>
             <span class="fa-stack">
-                <i class="	fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
+                <i class="fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
             </span>
         </nav>
         <!-- End of Header -->
         <div class="container-fluid">
 
             <div id="content" class="tab-content col-md-12 folder">
-                <h1 class="text-center pt-3 pb-2 ">TIN TUYỂN DỤNG</h1>
+                <h1 class="text-center pt-3 pb-2">TIN TUYỂN DỤNG</h1>
                 <div class="row">
                     <div class="col-md-12 list-jobs">
 
                         <!-- Pagination -->
-                        <div class="row justify-content-center">
+                        <!-- <div class="row justify-content-center">
                             <ul class="pagination">
                                 <li class="page-item">
                                     <a class="page-link" href="#" aria-label="Previous">
@@ -74,7 +74,7 @@
                                     </a>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
 
                     </div>
 
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-        <script src=".\js\scroll-animate.js"></script>
+        <script src="./js/scroll-animate.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
 
@@ -163,7 +163,6 @@
                 axios.get(url)
                     .then(response => {
                         let list = response.data;
-                        // console.log(JSON.stringify(list));
 
                         var i;
                         for (i = 0; i < list.length; i++) {
