Create slogan for homepage - MinhTHD

--- a/web-ui/web-v0.7.1/index.html
+++ b/web-ui/web-v0.7.1/index.html
@@ -74,12 +74,15 @@
     <div class="container-fluid">
         <div class="row justify-content-between">
             <!-- Company summary detail div -->
-            <div class="col-md-6"
-                 style="margin-top:10%">
+            <div class="col-md-6 img-logo">
                 <!-- <a href="#">
                     <img alt="Ranking Image"
                          src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237111/demo-image/ranking2.png">
                 </a> -->
+
+                <img alt="Ranking Image"
+                     src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541714808/demo-image/slogan-ctsa.png">
+
             </div>
 
             <div class="col-md-5 mr-3 forminput">
@@ -95,9 +98,10 @@
                 <span style="font-size: 28px;">Hãy cho chúng tôi biết thêm về bạn</span><br>
                 <div id="choose">
                     <span style="font-size:24px">Bạn là?</span>
-                    <div class="row justify-content-around">
-                        <div class="col-md-4 text-center">
-                            <a href="#">
+                    <div class="row justify-content-around trait">
+                        <div class="col-md-4 text-center trait">
+                            <a href="#"
+                               class="trait">
                                 <img id="student"
                                      alt="Student"
                                      src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237115/demo-image/student.png"
@@ -108,7 +112,8 @@
                             </a>
                         </div>
                         <div class="col-md-4 text-center">
-                            <a href="#">
+                            <a href="#"
+                               class="trait">
                                 <img id="college"
                                      alt="College"
                                      src="https://res.cloudinary.com/ctsa-capstone/image/upload/v1541237095/demo-image/college.png"
@@ -122,7 +127,7 @@
                 </div>
                 <div id="askform"
                      class="hideaway">
-                    <span class="head1"
+                    <span class="head1 form-question"
                           style="font-size: 24px">
                         <span class="fa-stack">
                             <span class="fa fa-circle fa-stack-2x"
@@ -145,7 +150,7 @@
                         </div>
                     </div>
                     <span style="font-size: 24px"
-                          class="head2">
+                          class="head2 form-question">
                         <span class="fa-stack">
                             <span class="fa fa-circle fa-stack-2x"
                                   style="color: #ff6414"></span>
@@ -167,7 +172,7 @@
 
                     </div>
                     <span style="font-size: 24px"
-                          class="head3">
+                          class="head3 form-question">
                         <span class="fa-stack">
                             <span class="fa fa-circle fa-stack-2x"
                                   style="color: #ff6414"></span>
@@ -208,7 +213,7 @@
 
                 <div id="ITAskform"
                      class="hideaway">
-                    <span class="head1"
+                    <span class="head1 form-question"
                           style="font-size: 24px">
                         <span class="fa-stack">
                             <span class="fa fa-circle fa-stack-2x"
