--- a/web-admin-custom/partner-registration.html
+++ b/web-admin-custom/partner-registration.html
@@ -61,7 +61,8 @@
 
     <link href="assets/css/style.css"
           rel="stylesheet">
-
+    <link rel="stylesheet"
+          href="ctsa-custom/ctsa.css">
     <script type="text/javascript"
             src="assets/js/vendor.js"></script>
     <script type="text/javascript"
@@ -350,9 +351,9 @@
                                                    class="btn btn-sm btn-orange">
                                         </div>
                                         <hr>
-										<div class="form-row justify-content-center"><button type="button"
-                                                class="btn btn-lg btn-orange"
-                                                onclick="submitForm()">Register</button></div>
+                                        <div class="form-row justify-content-center"><button type="button"
+                                                    class="btn btn-lg btn-orange"
+                                                    onclick="submitForm()">Register</button></div>
                                     </div>
                                 </div>
                             </div>
@@ -374,12 +375,11 @@
                                             <label class="font-weight-bold">Additional Information</label>
                                             <button type="button"
                                                     class="btn btn-sm btn-orange"
-                                                    onclick="addField()">Add
-                                                Field</button>
+                                                    onclick="addField()">Add Field</button>
                                             <button type="button"
                                                     class="btn btn-sm"
-                                                    onclick="removeField()">Remove
-                                                Field</button>
+                                                    onclick="removeField()">Remove Field</button>
+                                            <span id="alert"></span>
                                             <br>
                                             <br>
                                             <div class="form-row">
@@ -432,10 +432,11 @@
 
         function addField() {
             if (counter > 10) {
-                alert("Reached the maximum number of fields allowed.");
+                // alert("Reached the maximum number of fields allowed.")
+                $('#alert').text("Reached the maximum number of fields allowed.");
                 return false;
             }
-
+            $('#alert').empty();
             var newField = '<div class="form-row field' + counter + '">'
                 + '<div class="form-group col-md-4"><input type="text" class="form-control" id="field-title' + counter + '" placeholder="Title"></div>'
                 + '<div class="form-group col-md-2">:</div>'
@@ -449,10 +450,11 @@
 
         function removeField() {
             if (counter == 1) {
-                alert("No more field to remove.");
+                // alert("No more field to remove.");
+                $('#alert').text("No more field to remove.")
                 return false;
             }
-
+            $('#alert').empty();
             counter--;
 
             $(".field" + counter).remove();
