Enlarge everything for the shitty projector at school - MinhTHD

--- a/web-admin-custom/keyword.html
+++ b/web-admin-custom/keyword.html
@@ -121,17 +121,9 @@
         <div class="page-container">
             <div class="header navbar">
                 <div class="header-container bg-dark">
-                    <ul class="nav-left">
-                        <li><a id="sidebar-toggle"
-                               class="sidebar-toggle"
-                               href="javascript:void(0);"><i class="ti-menu"></i></a>
-                        </li>
-                        <li class="search-box"><a class="search-toggle no-pdd-right"
-                               href="javascript:void(0);"><i class="search-icon ti-search pdd-right-10"></i> <i class="search-icon-close ti-close pdd-right-10"></i></a></li>
-                        <li class="search-input"><input class="form-control"
-                                   type="text"
-                                   placeholder="Search..."></li>
-                    </ul>
+                   <div class="nav-left title-header" >
+                        <span>Career Trending Suggestion</span>
+                    </div>
                     <ul class="nav-right">
                         <li class="notifications dropdown"><span class="counter bgc-red">3</span> <a href=""
                                class="dropdown-toggle no-after"
@@ -286,14 +278,14 @@
                     </ul>
                 </div>
             </div>
-            <main class="main-content bgc-grey-100">
+            <main class="main-content bgc-grey-200">
                 <div id="mainContent">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="bgc-white bd bdrs-3 p-20 mB-20">
-                                    <h4 class="c-grey-900 mB-20">Keyword Data
-                                        Table</h4>
+                                    <h3 class="c-grey-900 mB-20">Keyword Data
+                                        Table</h3>
                                     <table id="dataTable"
                                            class="table table-striped table-bordered "
                                             
