--- a/web-admin-custom/publish-recruitment.html
+++ b/web-admin-custom/publish-recruitment.html
@@ -125,13 +125,9 @@
         <div class="page-container">
             <div class="header navbar">
                 <div class="header-container bg-dark">
-                    <ul class="nav-left">
-                        <li><a id="sidebar-toggle" class="sidebar-toggle" href="javascript:void(0);"><i class="ti-menu"></i></a>
-                        </li>
-                        <li class="search-box"><a class="search-toggle no-pdd-right" href="javascript:void(0);"><i
-                                    class="search-icon ti-search pdd-right-10"></i> <i class="search-icon-close ti-close pdd-right-10"></i></a></li>
-                        <li class="search-input"><input class="form-control" type="text" placeholder="Search..."></li>
-                    </ul>
+                    <div class="nav-left title-header" >
+                        <span>Career Trending Suggestion</span>
+                    </div>
                     <ul class="nav-right">
                         <li class="notifications dropdown"><span class="counter bgc-red">3</span> <a href="" class="dropdown-toggle no-after"
                                 data-toggle="dropdown"><i class="ti-bell"></i></a>
@@ -263,7 +259,7 @@
                     </ul>
                 </div>
             </div>
-            <main class="main-content bgc-grey-100">
+            <main class="main-content bgc-grey-200">
                 <div>
                     <form>
                         <div class="row">
