--- a/web-admin-custom/partner-registration.html
+++ b/web-admin-custom/partner-registration.html
@@ -132,17 +132,9 @@
         <div class="page-container">
             <div class="header navbar">
                 <div class="header-container bg-dark">
-                    <ul class="nav-left">
-                        <li><a id="sidebar-toggle"
-                               class="sidebar-toggle"
-                               href="javascript:void(0);"><i class="ti-menu"></i></a>
-                        </li>
-                        <li class="search-box"><a class="search-toggle no-pdd-right"
-                               href="javascript:void(0);"><i class="search-icon ti-search pdd-right-10"></i> <i class="search-icon-close ti-close pdd-right-10"></i></a></li>
-                        <li class="search-input"><input class="form-control"
-                                   type="text"
-                                   placeholder="Search..."></li>
-                    </ul>
+                    <div class="nav-left title-header" >
+                        <span>Career Trending Suggestion</span>
+                    </div>
                     <ul class="nav-right">
                         <li class="notifications dropdown"><span class="counter bgc-red">3</span> <a href=""
                                class="dropdown-toggle no-after"
@@ -297,13 +289,13 @@
                     </ul>
                 </div>
             </div>
-            <main class="main-content bgc-grey-100">
+            <main class="main-content bgc-grey-200">
                 <div>
                     <form>
                         <div class="row">
                             <div class="masonry-item col-md-6">
                                 <div class="bgc-white p-20 bd">
-                                    <h3 class="c-grey-900">Partner Registration</h3>
+                                    <h2 class="c-grey-900">Partner Registration</h2>
                                     <div class="mT-30">
                                         <div class="form-group">
                                             <label class="font-weight-bold"
@@ -359,7 +351,7 @@
                             </div>
                             <div class="masonry-item col-md-6">
                                 <div class="bgc-white p-20 bd">
-                                    <h3 class="c-grey-900">Optional Information</h3>
+                                    <h2 class="c-grey-900">Optional Information</h2>
                                     <div class="mT-30">
                                         <div class="form-group">
                                             <label class="font-weight-bold"
